--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,17 @@
 {
     "env": {
         "node": true,
-	"jest": true
+	    "jest": true
     },
-    "extends": [
-        "airbnb-base",
-	"plugin:prettier/recommended"
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "prettier",
+        "@typescript-eslint"
     ],
-    "plugins": ["prettier"],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
-    "rules": {
-      "consistent-return": "off"
-    }
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+	    "plugin:prettier/recommended"
+    ]
 }
