--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "boilerplate_nodejs",
   "version": "1.0.0",
   "description": "Simple boilerplate with prettier and eslint setup",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc --project ./",
-    "start": "nodemon -L index.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prettier": "prettier --check **/*.js",
-    "prettier:fix": "prettier --write **/*.js",
+    "start": "nodemon -L index.ts",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prettier": "prettier --check **/*.ts",
+    "prettier:fix": "prettier --write **/*.ts",
     "husky:setup": "husky install"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.12.4",
-    "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.29.0",
-    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
@@ -28,7 +28,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "express": "^4.17.1",
