setup for boilerplate updated with jest, updated several config file for husky/eslint/prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,13 @@
     "rootDir": "./",
     "outDir": "./build",
     "esModuleInterop": true,
-    "strict": true
-  }
+    "strict": true,
+    "resolveJsonModule": true,
+    "baseUrl": "./",
+    "paths": {
+      "test/*": ["test/*"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude" : ["src/**/*.test.ts"]
 }
