--- a/.eslintrc
+++ b/.eslintrc
@@ -9,8 +9,8 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/explicit-function-return-type": "on",
-        "@typescript-eslint/explicit-module-boundary-types": "on"
+        "@typescript-eslint/explicit-function-return-type": "warn",
+        "@typescript-eslint/explicit-module-boundary-types": "warn"
     },
     "overrides": [
         {
