--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prettier:fix": "prettier --write **/*.ts",
     "start": "nodemon -L index.ts",
     "swaggerGen": "npx swagger-typescript-api -p ./src/swagger/swagger.json -o ./src/swagger/api -t ./src/swagger/templates/modular --modular",
-    "test": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose"
+    "test": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose",
+    "test:watch": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose --watch"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
