--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
             "files": ["*.ts", "*.tsx"],
             "rules": {
                 "@typescript-eslint/explicit-function-return-type": ["error"],
-                "@typescript-eslint/explicit-module-boundary-types": ["error"]
+                "@typescript-eslint/explicit-module-boundary-types": ["error"],
+                "prettier/prettier": ["error", {}, { "usePrettierrc": true }]
     	    }
         }
     ],
