--- a/.eslintrc
+++ b/.eslintrc
@@ -8,17 +8,12 @@
         "prettier",
         "@typescript-eslint"
     ],
-    "rules": {
-        "@typescript-eslint/explicit-function-return-type": "warn",
-        "@typescript-eslint/explicit-module-boundary-types": "warn"
-    },
+    "rules": {},
     "overrides": [
         {
             "files": ["*.ts", "*.tsx"],
             "rules": {
-                "@typescript-eslint/explicit-function-return-type": ["error"],
-                "@typescript-eslint/explicit-module-boundary-types": ["error"],
-                "prettier/prettier": ["error", {}, { "usePrettierrc": true }]
+                "prettier/prettier": ["warn", {}, { "usePrettierrc": true }]
     	    }
         }
     ],
