--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "prettier": "prettier --check **/*.ts",
     "prettier:fix": "prettier --write **/*.ts",
-    "start": "nodemon -L index.ts",
+    "start": "yarn checkHusky && nodemon -L index.ts",
     "swaggerGen": "npx swagger-typescript-api -p ./src/swagger/swagger.json -o ./src/swagger/api -t ./src/swagger/templates/modular --modular",
     "swaggerBundle": "npx swagger-cli bundle ./src/swagger/baseApi.json --outfile ./src/swagger/swagger.json --type json",
     "test": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose",
-    "test:watch": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose --watch"
+    "test:watch": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose --watch",
+    "checkHusky": "node checkIfHuskyExists.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^15.12.4",
+    "@types/node": "^16.7.8",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
