add *.json in prettier commands

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "husky:setup": "husky install && npx husky add .husky/pre-commit \"yarn prettier:fix\" && npx husky add .husky/pre-commit \"yarn lint\" && npx husky add .husky/pre-commit \"yarn test\"",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "prettier": "prettier --check **/*.ts",
-    "prettier:fix": "prettier --write **/*.ts",
+    "prettier": "prettier --check **/*.ts **/*.json",
+    "prettier:fix": "prettier --write **/*.ts **/*.json",
     "start": "yarn checkHusky && nodemon -L index.ts",
     "swaggerGen": "npx swagger-typescript-api -p ./src/swagger/swagger.json -o ./src/swagger/api -t ./src/swagger/templates/modular --modular",
     "swaggerBundle": "npx swagger-cli bundle ./src/swagger/baseApi.json --outfile ./src/swagger/swagger.json --type json",
