--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prettier": "prettier --check **/*.ts **/*.json",
     "prettier:fix": "prettier --write **/*.ts **/*.json",
     "start": "yarn checkHusky && nodemon -L index.ts",
-    "swaggerGen": "npx swagger-typescript-api -p ./src/swagger/swagger.json -o ./src/swagger/api -t ./src/swagger/templates/modular --modular",
-    "swaggerBundle": "npx swagger-cli bundle ./src/swagger/baseApi.json --outfile ./src/swagger/swagger.json --type json",
+    "swaggerGen": "swagger-typescript-api -p ./src/swagger/swagger.json -o ./src/swagger/api -t ./src/swagger/templates/modular --modular",
+    "swaggerBundle": "swagger-cli bundle ./src/swagger/baseApi.json --outfile ./src/swagger/swagger.json --type json",
     "test": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose",
     "test:watch": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose --watch",
     "checkHusky": "node checkIfHuskyExists.ts"
@@ -38,6 +38,8 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
     "supertest": "^6.1.3",
+    "swagger-cli": "^4.0.4",
+    "swagger-typescript-api": "^9.2.0",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
