--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "husky:setup": "husky install && npx husky add .husky/pre-commit \"yarn prettier:fix\" && npx husky add .husky/pre-commit \"yarn lint\" && npx husky add .husky/pre-push \"yarn test\" && npx husky add .husky/pre-push \"yarn build\"",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "prettier": "prettier --check **/*.ts **/*.json",
-    "prettier:fix": "prettier --write **/*.ts **/*.json",
+    "prettier": "prettier --check **/*.{ts,json}",
+    "prettier:fix": "prettier --write **/*.{ts,json}",
     "start": "yarn checkHusky && nodemon -L index.ts",
     "swaggerGen": "npx swagger-typescript-api -p ./src/swagger/swagger.json -o ./src/swagger/api -t ./src/swagger/templates/modular --modular",
     "swaggerBundle": "npx swagger-cli bundle ./src/swagger/baseApi.json --outfile ./src/swagger/swagger.json --type json",
+    "swaggerFull": "yarn swaggerBundle && yarn swaggerGen && yarn prettier:fix",
     "test": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose",
     "test:watch": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose --watch",
     "checkHusky": "node checkIfHuskyExists.ts"
