add eol management file + quality of life improvment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-
 SECRET=Secret Passphrase
 NODE_ENV=dev
 PORT=8000
-FRONT_URL=http://localhost:3000
+NEO_SERVER_URL=http://localhost:3000
+NEO_HELPER_URL=http://localhost:3001
 JWT_SECRET=Other Secret Passphrase
