--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 SECRET=Secret Passphrase
 NODE_ENV=dev
-PORT=8000
+LOCAL_PORT=9999
+LOCAL_URL=http://localhost:9999
 NEO_SERVER_URL=http://localhost:3000
 NEO_HELPER_URL=http://localhost:3001
 JWT_SECRET=Other Secret Passphrase
