--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ SECRET=Secret Passphrase
 NODE_ENV=dev
 LOCAL_PORT=9999
 LOCAL_URL=http://localhost:9999
+REGISTER_URL=http://localhost:8007
 NEO_SERVER_URL=http://localhost:3000
 NEO_HELPER_URL=http://localhost:3001
 JWT_SECRET=Other Secret Passphrase
