:hammer: update start script and main entry

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "boilerplate_nodejs",
   "version": "1.0.0",
-  "description": "Simple boilerplate with prettier and eslint setup",
-  "main": "index.ts",
+  "description": "Simple boilerplate for backend services",
+  "main": "src/index.ts",
   "license": "MIT",
   "engines": {
     "node": ">=16.13.0"
@@ -15,7 +15,7 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "prettier": "prettier --check **/*.{ts,json}",
     "prettier:fix": "prettier --write **/*.{ts,json}",
-    "start": "yarn husky:check && nodemon -L index.ts",
+    "start": "yarn husky:check && nodemon -L ./src/index.ts",
     "swagger:gen": "npx swagger-typescript-api -p ./src/swagger/swagger.json -o ./src/swagger/api -t ./src/swagger/templates/modular --modular",
     "swagger:bundle": "npx swagger-cli bundle ./src/swagger/baseApi.json --outfile ./src/swagger/swagger.json --type json",
     "swagger:full": "yarn swagger:bundle && yarn swagger:gen && yarn prettier:fix",
