--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "swagger:gen": "npx swagger-typescript-api -p ./src/swagger/swagger.json -o ./src/swagger/api -t ./src/swagger/templates/modular --modular",
     "swagger:bundle": "npx swagger-cli bundle ./src/swagger/baseApi.json --outfile ./src/swagger/swagger.json --type json",
     "swagger:full": "yarn swagger:bundle && yarn swagger:gen && yarn prettier:fix",
-    "test": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose",
+    "test": "set NODE_ENV=test&& jest --detectOpenHandles --verbose",
     "test:watch": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose --watch"
   },
   "devDependencies": {
