:loud_sound: quick fix on logger not logging during yarn start

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SECRET=Secret Passphrase
-NODE_ENV=dev
+NODE_ENV=development
 LOCAL_PORT=9999
 LOCAL_URL=http://localhost:9999
 REGISTER_URL=http://localhost:8007
