:technologist: transform into import style for check if husky exists

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "tsc --project ./",
-    "husky:check": "node checkIfHuskyExists.ts",
+    "husky:check": "node --require ts-node/register ./checkIfHuskyExists",
     "husky:setup": "node --require ts-node/register ./prepare",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
