--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "swagger:gen": "npx swagger-typescript-api -p ./src/swagger/swagger.json -o ./src/swagger/api -t ./src/swagger/templates/modular --modular",
     "swagger:bundle": "npx swagger-cli bundle ./src/swagger/baseApi.json --outfile ./src/swagger/swagger.json --type json",
     "swagger:full": "yarn swagger:bundle && yarn swagger:gen && yarn prettier:fix",
-    "test": "set NODE_ENV=test&& jest --detectOpenHandles --verbose",
-    "test:watch": "set NODE_ENV=test&& jest --detectOpenHandles --silent --verbose --watch"
+    "test": "cross-env NODE_ENV=test&& jest --detectOpenHandles --verbose",
+    "test:coverage": "cross-env NODE_ENV=test&& jest --detectOpenHandles --verbose --coverage",
+    "test:watch": "cross-env NODE_ENV=test&& jest --detectOpenHandles --verbose --watch"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
@@ -33,6 +35,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
@@ -48,7 +51,9 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@neomanis/neo-utilities": "^1.0.2",
     "@neomanis/register-utilities": "^0.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
