--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-SECRET=Secret Passphrase
 NODE_ENV=development
-LOCAL_PORT=9999
-LOCAL_URL=http://localhost:9999
-REGISTER_URL=http://localhost:8007
-NEO_SERVER_URL=http://localhost:3000
-NEO_HELPER_URL=http://localhost:3001
-JWT_SECRET=Other Secret Passphrase
+LOCAL_PORT=8080
+LOCAL_URL=https://services.neomanis.bzh:8080
+REGISTER_URL=https://services.neomanis.bzh:8007
+
+#CERTIFICATES
+CA_CRT=neomanis-ca.crt
+SERVICE_CRT=services.crt
+SERVICE_KEY=services.key
