WIP of POC :alien:

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,18 @@
 NODE_ENV=development
 LOCAL_PORT=8080
 LOCAL_URL=https://services.neomanis.bzh:8080
-REGISTER_URL=https://services.neomanis.bzh:8007
 
-#CERTIFICATES
-CA_CRT=neomanis-ca.crt
-SERVICE_CRT=services.crt
-SERVICE_KEY=services.key
+#TYPEORM
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=127.0.0.1
+TYPEORM_PORT=1234
+TYPEORM_DATABASE=authenticator
+TYPEORM_USERNAME=postgres
+TYPEORM_PASSWORD=postgres
+TYPEORM_SYNCHRONIZE=false
+
+#for development
+TYPEORM_ENTITIES=src/entities/**.ts
+TYPEORM_ENTITIES_DIR=src/entities
+TYPEORM_MIGRATIONS=src/migrations/**.ts
+TYPEORM_MIGRATIONS_DIR=src/migrations
