--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate_nodejs",
-  "version": "1.0.0",
-  "description": "Simple boilerplate for backend services",
+  "name": "authenticator",
+  "version": "0.0.1",
+  "description": "2 factors authentication service",
   "main": "src/index.ts",
   "license": "MIT",
   "engines": {
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "build": "tsc --project ./",
+    "db:create": "npx ts-node src/database/build.ts",
+    "db:drop": "npx ts-node src/database/drop.ts",
     "husky:check": "node --require ts-node/register ./checkIfHuskyExists",
     "husky:setup": "node --require ts-node/register ./prepare",
     "lint": "eslint . --ext .ts",
@@ -28,9 +30,13 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/jsonwebtoken": "^8.5.5",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.6",
+    "@types/otplib": "^10.0.0",
+    "@types/pg": "^8.6.5",
+    "@types/qrcode": "^1.5.0",
+    "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
@@ -52,6 +58,7 @@
   },
   "dependencies": {
     "@neomanis/neo-utilities": "^1.0.2",
+    "@types/uuid": "^9.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -61,7 +68,13 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node": "^16.13.0",
+    "otplib": "^12.0.1",
+    "pg": "^8.8.0",
+    "pgtools": "^0.3.2",
+    "qrcode": "^1.5.1",
+    "sequelize": "^6.26.0",
     "swagger-ui-express": "^4.1.6",
+    "uuid": "^9.0.0",
     "winston": "^3.3.3"
   },
   "keywords": [],
